# CompressEPS

./: .gitignore  CMakeLists.txt  README.md
doc/: doxygen.conf
doc/html/: Bitmap_8cc.html  Bitmap_8cc__incl.dot  Bitmap_8cc__incl.md5  Bitmap_8h.html  Bitmap_8h__dep__incl.dot  Bitmap_8h__dep__incl.md5  Bitmap_8h__incl.dot  Bitmap_8h__incl.md5  Bitmap_8h_source.html  Chain_8cc.html  Chain_8cc__incl.dot  Chain_8cc__incl.md5  Chain_8h.html  Chain_8h__dep__incl.dot  Chain_8h__dep__incl.md5  Chain_8h__incl.dot  Chain_8h__incl.md5  Chain_8h_source.html  CompressEPS_8cc.html  CompressEPS_8cc__incl.dot  CompressEPS_8cc__incl.md5  Converter_8cc.html  Converter_8cc__incl.dot  Converter_8cc__incl.md5  Converter_8h.html  Converter_8h__dep__incl.dot  Converter_8h__dep__incl.md5  Converter_8h__incl.dot  Converter_8h__incl.md5  Converter_8h_source.html  InstructionInterpreter_8cc.html  InstructionInterpreter_8cc__incl.dot  InstructionInterpreter_8cc__incl.md5  InstructionInterpreter_8h.html  annotated.html  (+25 more)
src/: Bitmap.cc  Bitmap.h  CMakeLists.txt  Chain.cc  Chain.h  CompressEPS.cc  Converter.cc  Converter.h  InstructionInterpreter.cc  InstructionInterpreter.h  InstructionReader.cc  InstructionReader.h
test/: BitmapTests.cc  CMakeLists.txt  ChainTests.cc  ConverterTests.cc  InstructionInterpreterTests.cc  main.cc
test/testFiles/: Chain.eps  Chains.eps  Chains2.eps  Correct.eps  NoBoundingBox.eps  NoPSAdobe.eps  Rectangle.eps  Rectangles.eps  b.eps
tests/: BitmapTests.cc  CMakeLists.txt  ChainTests.cc  ConverterTests.cc  InstructionInterpreter.cc  InstructionInterpreterTests.cc
(+70 files in other folders)
